styles.css
/* ... */
.logo_header {
    color: #FFF;
    font-family: Segoe UI, sans-serif;
    font-size: 28px;
    font-style: normal;
    font-weight: 600;
    line-height: 24px; /* 85.714% */
    font-variant: all-small-caps;
    letter-spacing: 0.56px;
}

.search_header{
    position: relative;
    flex-grow: 1;
    margin: 4px 32px;
    height: 48px;
    color: #FFF;
    /*opacity: 0.4;*/
    background: rgba(255, 255, 255, 0.20);
    padding: 0 20px;
    width: auto;
    display: flex;
    border: 0;
    -webkit-border-radius: 36px;
    -moz-border-radius: 36px;
    border-radius: 36px;
    gap: 8px;
    justify-content: center;
    align-items: center;
}

.search_header input{
    padding: 10px 0;
    border: 0;
    background: rgba(255, 255, 255, 0);
    outline: none;
    flex: 1;
    font-family: Segoe UI, sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px; /* 133.333% */
    color: #FFFFFF;
    opacity: 0.5;
}

.search_header input::placeholder {
    font-family: Segoe UI, sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px; /* 133.333% */
    color: #FFF;
}

.search_header img{
    width: 24px;
    height: 24px;
}

.header-right-block{
    width: 169px;
    display: flex;
    gap: 40px;
}
.header-shopping-trolley,
.header-profile{
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}
.header-shopping-trolley img,
.header-profile img{
    width: 28px;
    height: 28px;
    padding: 1px 13px 1px 15px;
}
.header-shopping-trolley p,
.header-profile p{
    padding-top: 6px;
    color: #FFF;
    font-family: Segoe UI, sans-serif;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px; /* 123.077% */
}
.header-shopping-trolley img{
    padding: 1px 18px 1px 10px;
}
.red-circle-number{
    position: absolute;
    left: 32px;
    top: 0;
    border-radius: 16px;
    background: #F55123;
    height: 16px;
    /*width: 16px;*/
    min-width: 16px;
    box-sizing: border-box;
    color: #FFF;
    text-align: center;
    font-family: Segoe UI, sans-serif;
    font-size: 10px;
    font-style: normal;
    font-weight: 700;
    line-height: 15px;
    text-align: center;
}
.red-circle-number span{
    font-family: Segoe UI, sans-serif;
    font-size: 10px;
    font-style: normal;
    font-weight: 700;
    line-height: 15px;
    min-width: 12px;
    padding: 0 4.5px 0 4px;

}
.header-profile span{
    display: none;
}

/*Header MEDIA--------------------------------------------------------->*/

@media screen and (max-width:480px) {
    .app-wrapper {
        width: 100%;
        min-width: 100%;
    }
    header{
        height: 56px;
        min-width: 100%;
    }
    .header-wrapper{
        max-width: 100%;
        width: 100%;
        padding: 0 13px;
        min-width: 100%;
        box-sizing: border-box;
    }
    .header-left-block{
        width: 100%;
        display: flex;
        justify-content: space-between;
    }

    .menu_header img{
        display: block;
    }
    .menu_header{
        width: 28px;
        height: 28px;
        cursor: pointer;
        border: 0;
        padding: 0;
    }

    .menu_header span,
    .menu_header:before,
    .menu_header:after{
        display: none;
    }

    .logo_header{
        width: fit-content;
        box-sizing: border-box;
        font-family: Segoe UI, sans-serif;
        height: 56px;
        height: auto;
        margin: 0;
        font-size: 26px;
        font-style: normal;
        font-weight: 600;
        line-height: 24px; /* 92.308% */
        font-variant: all-small-caps;
        letter-spacing: 0.52px;
        padding: 11px 4px 21px 4px;

    }
    .header-left-block{
        gap: 0;
    }

    #header-mobile-search{
        display: inline-block;
        width: 28px;
        height: 28px;
        color: #FFFFFF;
        opacity: 1;
    }

    .search_header {
        display: none;
    }
    .search_header input{
        display: none;
    }
    .header-right-block{
        display: none;
    }
}

/*Header END <---------------------------------------------------------*/
/*Content START--------------------------------------------------------->*/

.content-wrapper{
    position: relative;
    max-width: 1400px;
    min-width: 1024px;
    margin: 0 auto;

    width: 100%;
    flex: 1 0 auto;
    /*background-color: rgba(246, 246, 250, 1);*/
    /*border-radius: 24px;*/
    display: flex;
    justify-content: center;
    box-sizing: border-box;
    gap: 32px;
    padding: 0px 24px 50px 24px;

}
main{
    max-width: 891px;
    min-width: 640px;
    width: 100%;
    margin-top: 34px;
    flex-shrink: 15;
}

/*Shopping trolley: selected items START--------------------------------------------------------->*/

.content-shopping-trolley h1{
    color: #000;
    /* Сайт/H1 */
    font-family: Segoe UI, sans-serif;
    font-size: 28px;
    font-style: normal;
    font-weight: 700;
    line-height: 36px; /* 128.571% */
    letter-spacing: -0.28px;
    display: inline-block;
    width: auto;
    display: flex;
}
.items{
    overflow: hidden;
}
.selected-items{
    position: relative;
    margin-top: 27px;
}
.not-found-items-top-header,
.items-top-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.arrow-collapse{
    cursor: pointer;
    display: flex;
    float: right;
    display: flex;
    height: 8px;
    width: 8px;
    border-radius: 1px;
    border-top: 2px solid rgba(160, 160, 164, 1);
    border-right: 2px solid rgba(160, 160, 164, 1);
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    transform: rotate(-45deg);
    margin-top: 6px;
}

.select-input{
    display: none;
}
/* ... */

